--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1727,7 +1727,7 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 #container{
     max-width:1200px;
     margin-right:auto;
-    margin-left:auto;
+    margin-left:auto; 
 }
 
 #globalheader{
@@ -1738,7 +1738,8 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     width: 100%;
     height: 90px;
     padding-bottom:12px;
-    z-index:100;   
+    z-index:100; 
+     
 }
 
 #topheader{
@@ -1902,15 +1903,15 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     text-align:center;
     font-size:1.3em;
     padding:5px;
-    border-bottom:1px solid #EEE;
+    border-bottom:2px solid #EEE;
 }
 
 #subnav li:hover{
-
+    
 }
 
 #subnav a:hover{
-    background-color: #EEE;   
+    border-bottom:2px solid #FF0000;  
 }
 
 #content{
@@ -2270,7 +2271,7 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 
 .videos_list ul li a h1{
     font-size:1.3em;
-    margin-left:190px;
+    margin-left:180px;
 }
 
 .videos_list ul li a:hover h1{
